Evergine.Bindings.CesiumNative/Generated/Functions.cs

// -------------------------------------------------------------------------------------------------
// This file was auto-generated by CesiumGen. Do not edit manually.
// -------------------------------------------------------------------------------------------------
using System;
using System.Runtime.InteropServices;
using Evergine.Bindings.CesiumNative.Common;
using Evergine.Bindings.CesiumNative.Geospatial;
using Evergine.Bindings.CesiumNative.Gltf;
using Evergine.Bindings.CesiumNative.Ion;
using Evergine.Bindings.CesiumNative.RasterOverlays;
using Evergine.Bindings.CesiumNative.Tileset;

namespace Evergine.Bindings.CesiumNative.Common
{
	public static unsafe partial class CesiumNativeAPI
	{
		/// <summary>
		/// @brief Returns the last error message, or NULL if no error has occurred.
		/// The returned pointer is valid until the next API call on the same thread.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_get_last_error();

		/// <summary>
		/// @brief Clears the last error.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_clear_last_error();
	}
}

namespace Evergine.Bindings.CesiumNative.Geospatial
{
	public static unsafe partial class CesiumNativeAPI
	{
		/// <summary>
		/// @brief Creates an ellipsoid with the given radii.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_ellipsoid_create(double radiusX, double radiusY, double radiusZ);

		/// <summary>
		/// @brief Returns the WGS84 ellipsoid (singleton — do NOT destroy).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_ellipsoid_wgs84();

		/// <summary>
		/// @brief Returns the unit sphere ellipsoid (singleton — do NOT destroy).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_ellipsoid_unit_sphere();

		/// <summary>
		/// @brief Destroys a user-created ellipsoid. Do not call on WGS84 or UNIT_SPHERE.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_ellipsoid_destroy(IntPtr ellipsoid);

		/// <summary>
		/// @brief Gets the radii of the ellipsoid.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumVec3 cesium_ellipsoid_get_radii(IntPtr ellipsoid);

		/// <summary>
		/// @brief Gets the maximum radius.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern double cesium_ellipsoid_get_maximum_radius(IntPtr ellipsoid);

		/// <summary>
		/// @brief Gets the minimum radius.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern double cesium_ellipsoid_get_minimum_radius(IntPtr ellipsoid);

		/// <summary>
		/// @brief Converts a cartographic position to Cartesian coordinates.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumVec3 cesium_ellipsoid_cartographic_to_cartesian(IntPtr ellipsoid, CesiumCartographic cartographic);

		/// <summary>
		/// @brief Converts Cartesian coordinates to a cartographic position.
		/// @return 1 on success, 0 if the point is at the center (result is invalid).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_ellipsoid_cartesian_to_cartographic(IntPtr ellipsoid, CesiumVec3 cartesian, CesiumCartographic* out_result);

		/// <summary>
		/// @brief Computes the geodetic surface normal at the given Cartesian position.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumVec3 cesium_ellipsoid_geodetic_surface_normal_cartesian(IntPtr ellipsoid, CesiumVec3 cartesian);

		/// <summary>
		/// @brief Computes the geodetic surface normal at the given cartographic position.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumVec3 cesium_ellipsoid_geodetic_surface_normal_cartographic(IntPtr ellipsoid, CesiumCartographic cartographic);

		/// <summary>
		/// @brief Scales the position along the geodetic normal to the ellipsoid surface.
		/// @return 1 on success, 0 if the point is at the center (result is invalid).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_ellipsoid_scale_to_geodetic_surface(IntPtr ellipsoid, CesiumVec3 cartesian, CesiumVec3* out_result);

		/// <summary>
		/// @brief Scales the position along the geocentric normal to the ellipsoid surface.
		/// @return 1 on success, 0 if the point is at the center (result is invalid).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_ellipsoid_scale_to_geocentric_surface(IntPtr ellipsoid, CesiumVec3 cartesian, CesiumVec3* out_result);

		/// <summary>
		/// @brief Creates a cartographic position from degrees (converted to radians).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumCartographic cesium_cartographic_from_degrees(double longitudeDegrees, double latitudeDegrees, double heightMeters);

		/// <summary>
		/// @brief Creates a globe rectangle from degrees (converted to radians).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumGlobeRectangle cesium_globe_rectangle_from_degrees(double westDegrees, double southDegrees, double eastDegrees, double northDegrees);

		/// <summary>
		/// @brief Computes the width of the globe rectangle in radians.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern double cesium_globe_rectangle_compute_width(CesiumGlobeRectangle rect);

		/// <summary>
		/// @brief Computes the height of the globe rectangle in radians.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern double cesium_globe_rectangle_compute_height(CesiumGlobeRectangle rect);

		/// <summary>
		/// @brief Computes the center of the globe rectangle.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumCartographic cesium_globe_rectangle_compute_center(CesiumGlobeRectangle rect);

		/// <summary>
		/// @brief Returns 1 if the rectangle contains the given cartographic point.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_globe_rectangle_contains(CesiumGlobeRectangle rect, CesiumCartographic point);

		/// <summary>
		/// @brief Computes the east-north-up to fixed frame transformation matrix.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumMat4 cesium_globe_transforms_east_north_up_to_fixed_frame(CesiumVec3 origin, IntPtr ellipsoid);
	}
}

namespace Evergine.Bindings.CesiumNative.Gltf
{
	public static unsafe partial class CesiumNativeAPI
	{
		/// <summary>
		/// @brief Creates a new GltfReader instance.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_gltf_reader_create();

		/// <summary>
		/// @brief Destroys a GltfReader instance.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_gltf_reader_destroy(IntPtr reader);

		/// <summary>
		/// @brief Reads a glTF or GLB from a byte buffer.
		/// @param reader The reader instance.
		/// @param data Pointer to the glTF/GLB data.
		/// @param data_size Size of the data in bytes.
		/// @return A result handle (must be destroyed with cesium_gltf_reader_result_destroy).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_gltf_reader_read(IntPtr reader, byte* data, nuint data_size);

		/// <summary>
		/// @brief Destroys a GltfReaderResult and any model it contains.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_gltf_reader_result_destroy(IntPtr result);

		/// <summary>
		/// @brief Returns 1 if the result contains a valid model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_reader_result_has_model(IntPtr result);

		/// <summary>
		/// @brief Returns the number of errors in the result.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_reader_result_get_error_count(IntPtr result);

		/// <summary>
		/// @brief Returns the error message at the given index.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_gltf_reader_result_get_error(IntPtr result, int index);

		/// <summary>
		/// @brief Returns the number of warnings in the result.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_reader_result_get_warning_count(IntPtr result);

		/// <summary>
		/// @brief Returns the warning message at the given index.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_gltf_reader_result_get_warning(IntPtr result, int index);

		/// <summary>
		/// @brief Gets the model from a reader result. The pointer is owned by the result.
		/// @return The model pointer, or NULL if no model was read.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_gltf_reader_result_get_model(IntPtr result);

		/// <summary>
		/// @brief Gets the number of meshes in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_mesh_count(IntPtr model);

		/// <summary>
		/// @brief Gets the name of a mesh. Returns empty string if no name.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_gltf_model_get_mesh_name(IntPtr model, int meshIndex);

		/// <summary>
		/// @brief Gets the number of materials in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_material_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of textures in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_texture_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of images in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_image_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of nodes in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_node_count(IntPtr model);
